--- a/pages/blog/post-01/index.mdx
+++ b/pages/blog/post-01/index.mdx
@@ -1,13 +1,24 @@
----
-title: Segundo post
-tags: 
-  - back-end
-  - nodeJs
-date: 08-03-2022
-summary:  Ut enim ad minima iste natus error sit voluptatem. Et harum quidem rerum facilis est et expedita distinctio.
----
+import BlogPost from '../../../components/BlogPost'
+import Button from '../../../components/Button'
 
-# Eaque ipsa quae ab illo inventore veritatis et quasi.
+export const meta = {
+  title: 'Primeiro post',
+  description: 'Getting started with the Next framework',
+  date: 'Aug 04, 2020',
+  readTime: 2
+}
+
+export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>;
+
+<Button />
+
+# Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.
+
+Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit. Et harum quidem rerum facilis est et expedita distinctio. Do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
+Accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo. __At vero eos et accusamus.__ *At vero eos et accusamus.* Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+
+## Eaque ipsa quae ab illo inventore veritatis et quasi.
 
 Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam. Sed ut perspiciatis unde omnis iste natus error sit voluptatem. Et harum quidem rerum facilis est et expedita distinctio.
 
@@ -15,7 +26,7 @@ Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit la
 2. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
 3. Sed ut perspiciatis unde omnis iste natus error sit voluptatem.
 
-## Inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+### Inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
 
 Corrupti quos dolores et quas molestias excepturi sint occaecati. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.
 
