--- a/pages/blog/01-primeiro-post/index.mdx
+++ b/pages/blog/01-primeiro-post/index.mdx
@@ -12,6 +12,8 @@ export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>;
 
 <Button />
 
+![teste imagem](/img/teste.jpg)
+
 # Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.
 
 Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit. Et harum quidem rerum facilis est et expedita distinctio. Do eiusmod tempor incididunt ut labore et dolore magna aliqua.
