--- a/pages/blog/01-primeiro-post/index.mdx
+++ b/pages/blog/01-primeiro-post/index.mdx
@@ -1,5 +1,7 @@
 import BlogPost from '../../../components/BlogPost'
 import Button from '../../../components/Button'
+import Img from '../../../components/Img'
+
 
 export const meta = {
   title: 'Primeiro post',
@@ -13,6 +15,7 @@ export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>;
 <Button />
 
 ![teste imagem](/img/teste.jpg)
+
 
 # Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit.
 
